# Long-Form-to-Short-Form-Video-Engine

./: .gitignore  README.md  cli.py  extractor.py  pyproject.toml  scorer.py  segmenter.py  test.py  transcriber.py  utils.py
docs/: segmentation_options.md
